--- a/popup.html
+++ b/popup.html
@@ -9,7 +9,7 @@
       text-align: center;
     }
   </style>
-  <script src="popup.js"></script>
+  <script src="background.js"></script>
 </head>
 <body>
   <h1>ChatGPT</h1>
